added new databse and few features for post sending

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,21 @@ ADMIN_PASSWORD=your-secure-admin-password
 MNOTIFY_API_KEY=your-mnotify-api-key
 ADMIN_PHONE_NUMBER=your-phone-number
 
+# Groq API Configuration for RAG chatbot
+GROQ_API_KEY=your-groq-api-key
+
+# Site domain for absolute URLs in emails
+SITE_DOMAIN=http://127.0.0.1:8000
+
+# Supabase Database Configuration
+SUPABASE_URL=your-supabase-url
+SUPABASE_ANON_KEY=your-supabase-anon-key
+SUPABASE_DB_NAME=postgres
+SUPABASE_DB_USER=postgres
+SUPABASE_DB_PASSWORD=your-database-password
+SUPABASE_DB_HOST=db.your-project-ref.supabase.co
+SUPABASE_DB_PORT=5432
+
 # Instructions:
 # 1. Copy this file to .env
 # 2. Replace all the placeholder values with your actual credentials
