--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,10 @@ django-taggit>=5.0.1
 requests>=2.31.0
 beautifulsoup4>=4.12.0
 python-dotenv>=1.0.0
+faiss-cpu>=1.7.4
+sentence-transformers>=2.2.2
+groq>=0.4.1
+numpy>=1.24.0
+tiktoken>=0.5.1
+psycopg2-binary>=2.9.0
+dj-database-url
