--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,6 @@ groq>=0.4.1
 numpy>=1.24.0
 tiktoken>=0.5.1
 psycopg2-binary>=2.9.0
-dj-database-url
-openai>=1.0.0
+dj-database-url>=2.0.0
+whitenoise>=6.5.0
+gunicorn>=21.2.0
