--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,11 @@ SITE_DOMAIN=https://your-domain.com
 # Railway PostgreSQL Database
 DATABASE_URL=your-database-url-here
 
+# Cloudinary configuration for persistent media storage (fixes image disappearing issue)
+CLOUDINARY_CLOUD_NAME=your-cloud-name
+CLOUDINARY_API_KEY=your-api-key
+CLOUDINARY_API_SECRET=your-api-secret
+
 # Instructions:
 # 1. Copy this file to .env
 # 2. Replace all the placeholder values with your actual credentials
