--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,7 @@ psycopg2-binary>=2.9.0
 dj-database-url>=2.0.0
 whitenoise>=6.5.0
 gunicorn>=21.2.0
+cloudinary>=1.36.0
+django-cloudinary-storage>=0.3.0
+cloudinary>=1.36.0
+django-cloudinary-storage>=0.3.0
