--- a/render.yaml
+++ b/render.yaml
@@ -15,6 +15,12 @@ services:
         generateValue: true
       - key: DEBUG
         value: False
+      - key: CLOUDINARY_CLOUD_NAME
+        sync: false
+      - key: CLOUDINARY_API_KEY
+        sync: false
+      - key: CLOUDINARY_API_SECRET
+        sync: false
 
 databases:
   - name: personal-site-db
