--- a/requirements.txt
+++ b/requirements.txt
@@ -16,5 +16,8 @@ whitenoise>=6.5.0
 gunicorn>=21.2.0
 cloudinary>=1.36.0
 django-cloudinary-storage>=0.3.0
-cloudinary>=1.36.0
-django-cloudinary-storage>=0.3.0
+celery>=5.3.0
+redis>=5.0.0
+django-redis>=5.3.0
+aiohttp>=3.8.0
+uvicorn[standard]>=0.23.0
